# RtcRoom

./: .gitignore  Makefile  README.md
.github/workflows/: windows_build.yml
client/: CMakeLists.txt
client/src/: MainWindow.cpp  MainWindow.h  SignalManager.cpp  SignalManager.h  VideoRenderer.cpp  VideoRenderer.h  WebRTCManager.cpp  WebRTCManager.h
server/: go.mod  main.go
server/signal/: client.go  manager.go  room.go
